fix: update the k-route
