# api/route/route.pb.go
@@ -444,12 +444,12 @@ type Cors struct {
 	unknownFields protoimpl.UnknownFields
 
 	Enabled          bool     `protobuf:"varint,1,opt,name=enabled,proto3" json:"enabled,omitempty"`
-	AllowOrigins     []string `protobuf:"bytes,2,rep,name=allow_origins,json=allowOrigins,proto3" json:"allow_origins,omitempty"`
-	AllowMethods     []string `protobuf:"bytes,3,rep,name=allow_methods,json=allowMethods,proto3" json:"allow_methods,omitempty"`
-	AllowHeaders     []string `protobuf:"bytes,4,rep,name=allow_headers,json=allowHeaders,proto3" json:"allow_headers,omitempty"`
-	ExposeHeaders    []string `protobuf:"bytes,5,rep,name=expose_headers,json=exposeHeaders,proto3" json:"expose_headers,omitempty"`
-	MaxAge           uint32   `protobuf:"varint,6,opt,name=max_age,json=maxAge,proto3" json:"max_age,omitempty"`
-	AllowCredentials bool     `protobuf:"varint,7,opt,name=allow_credentials,json=allowCredentials,proto3" json:"allow_credentials,omitempty"`
+	AllowOrigins     []string `protobuf:"bytes,2,rep,name=allow_origins,json=allowOrigins,proto3" json:"allowOrigins,omitempty"`              // @gotags: json:"allowOrigins,omitempty"
+	AllowMethods     []string `protobuf:"bytes,3,rep,name=allow_methods,json=allowMethods,proto3" json:"allowMethods,omitempty"`              // @gotags: json:"allowMethods,omitempty"
+	AllowHeaders     []string `protobuf:"bytes,4,rep,name=allow_headers,json=allowHeaders,proto3" json:"allowHeaders,omitempty"`              // @gotags: json:"allowHeaders,omitempty"
+	ExposeHeaders    []string `protobuf:"bytes,5,rep,name=expose_headers,json=exposeHeaders,proto3" json:"exposeHeaders,omitempty"`           // @gotags: json:"exposeHeaders,omitempty"
+	AllowCredentials bool     `protobuf:"varint,6,opt,name=allow_credentials,json=allowCredentials,proto3" json:"allowCredentials,omitempty"` // @gotags: json:"allowCredentials,omitempty"
+	MaxAge           uint32   `protobuf:"varint,7,opt,name=max_age,json=maxAge,proto3" json:"maxAge,omitempty"`                               // @gotags: json:"maxAge,omitempty"
 }
 
 func (x *Cors) Reset() {
@@ -519,18 +519,18 @@ func (x *Cors) GetExposeHeaders() []string {
 	return nil
 }
 
-func (x *Cors) GetMaxAge() uint32 {
-	if x != nil {
-		return x.MaxAge
-	}
-	return 0
-}
-
 func (x *Cors) GetAllowCredentials() bool {
 	if x != nil {
 		return x.AllowCredentials
 	}
 	return false
+}
+
+func (x *Cors) GetMaxAge() uint32 {
+	if x != nil {
+		return x.MaxAge
+	}
+	return 0
 }
 
 type Rewrite struct {
@@ -656,8 +656,8 @@ type Redirect struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Code uint32 `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
-	Url  string `protobuf:"bytes,2,opt,name=url,proto3" json:"url,omitempty"`
+	Code uint32 `protobuf:"varint,2,opt,name=code,proto3" json:"code,omitempty"`
+	Url  string `protobuf:"bytes,3,opt,name=url,proto3" json:"url,omitempty"`
 }
 
 func (x *Redirect) Reset() {
@@ -711,8 +711,8 @@ type DirectResponse struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Code uint32 `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
-	Body string `protobuf:"bytes,2,opt,name=body,proto3" json:"body,omitempty"`
+	Code uint32 `protobuf:"varint,2,opt,name=code,proto3" json:"code,omitempty"`
+	Body string `protobuf:"bytes,3,opt,name=body,proto3" json:"body,omitempty"`
 }
 
 func (x *DirectResponse) Reset() {
@@ -911,12 +911,12 @@ var file_route_route_proto_rawDesc = []byte{
 	0x73, 0x18, 0x04, 0x20, 0x03, 0x28, 0x09, 0x52, 0x0c, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x48, 0x65,
 	0x61, 0x64, 0x65, 0x72, 0x73, 0x12, 0x25, 0x0a, 0x0e, 0x65, 0x78, 0x70, 0x6f, 0x73, 0x65, 0x5f,
 	0x68, 0x65, 0x61, 0x64, 0x65, 0x72, 0x73, 0x18, 0x05, 0x20, 0x03, 0x28, 0x09, 0x52, 0x0d, 0x65,
-	0x78, 0x70, 0x6f, 0x73, 0x65, 0x48, 0x65, 0x61, 0x64, 0x65, 0x72, 0x73, 0x12, 0x17, 0x0a, 0x07,
-	0x6d, 0x61, 0x78, 0x5f, 0x61, 0x67, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x06, 0x6d,
-	0x61, 0x78, 0x41, 0x67, 0x65, 0x12, 0x2b, 0x0a, 0x11, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x5f, 0x63,
-	0x72, 0x65, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x61, 0x6c, 0x73, 0x18, 0x07, 0x20, 0x01, 0x28, 0x08,
-	0x52, 0x10, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x43, 0x72, 0x65, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x61,
-	0x6c, 0x73, 0x22, 0x53, 0x0a, 0x07, 0x52, 0x65, 0x77, 0x72, 0x69, 0x74, 0x65, 0x12, 0x18, 0x0a,
+	0x78, 0x70, 0x6f, 0x73, 0x65, 0x48, 0x65, 0x61, 0x64, 0x65, 0x72, 0x73, 0x12, 0x2b, 0x0a, 0x11,
+	0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x5f, 0x63, 0x72, 0x65, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x61, 0x6c,
+	0x73, 0x18, 0x06, 0x20, 0x01, 0x28, 0x08, 0x52, 0x10, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x43, 0x72,
+	0x65, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x61, 0x6c, 0x73, 0x12, 0x17, 0x0a, 0x07, 0x6d, 0x61, 0x78,
+	0x5f, 0x61, 0x67, 0x65, 0x18, 0x07, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x06, 0x6d, 0x61, 0x78, 0x41,
+	0x67, 0x65, 0x22, 0x53, 0x0a, 0x07, 0x52, 0x65, 0x77, 0x72, 0x69, 0x74, 0x65, 0x12, 0x18, 0x0a,
 	0x07, 0x65, 0x6e, 0x61, 0x62, 0x6c, 0x65, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07,
 	0x65, 0x6e, 0x61, 0x62, 0x6c, 0x65, 0x64, 0x12, 0x10, 0x0a, 0x03, 0x75, 0x72, 0x69, 0x18, 0x02,
 	0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x75, 0x72, 0x69, 0x12, 0x1c, 0x0a, 0x09, 0x61, 0x75, 0x74,
@@ -931,14 +931,14 @@ var file_route_route_proto_rawDesc = []byte{
 	0x09, 0x52, 0x04, 0x62, 0x6f, 0x64, 0x79, 0x12, 0x1a, 0x0a, 0x08, 0x72, 0x65, 0x64, 0x69, 0x72,
 	0x65, 0x63, 0x74, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x72, 0x65, 0x64, 0x69, 0x72,
 	0x65, 0x63, 0x74, 0x22, 0x4d, 0x0a, 0x08, 0x52, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x12,
-	0x25, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0d, 0x42, 0x11, 0xfa,
+	0x25, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x42, 0x11, 0xfa,
 	0x42, 0x0e, 0x2a, 0x0c, 0x30, 0xad, 0x02, 0x30, 0xae, 0x02, 0x30, 0xb3, 0x02, 0x30, 0xb4, 0x02,
-	0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x1a, 0x0a, 0x03, 0x75, 0x72, 0x6c, 0x18, 0x02, 0x20,
+	0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x1a, 0x0a, 0x03, 0x75, 0x72, 0x6c, 0x18, 0x03, 0x20,
 	0x01, 0x28, 0x09, 0x42, 0x08, 0xfa, 0x42, 0x05, 0x72, 0x03, 0xa8, 0x01, 0x01, 0x52, 0x03, 0x75,
 	0x72, 0x6c, 0x22, 0x38, 0x0a, 0x0e, 0x44, 0x69, 0x72, 0x65, 0x63, 0x74, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01,
+	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01,
 	0x28, 0x0d, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x62, 0x6f, 0x64, 0x79,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x62, 0x6f, 0x64, 0x79, 0x32, 0xbb, 0x03, 0x0a,
+	0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x62, 0x6f, 0x64, 0x79, 0x32, 0xbb, 0x03, 0x0a,
 	0x0c, 0x52, 0x6f, 0x75, 0x74, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x54, 0x0a,
 	0x04, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x12, 0x2e, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x2e, 0x4c, 0x69,
 	0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x13, 0x2e, 0x72, 0x6f, 0x75, 0x74,
